# yoda

./: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
benchmark/: corruptor.py  datasets.py  run_benchmark.py  run_instructions.py  scorer.py
benchmark/results/instructions/: qwen3.5_2b.json  qwen3.5_2b.md  qwen3.5_4b.json  qwen3.5_4b.md
benchmark/results/qwen3.5_2b/: clinic_patients_audit.jsonl  clinic_patients_score.json  employees_audit.jsonl  employees_score.json  inventory_audit.jsonl  inventory_score.json  ph_customers_audit.jsonl  ph_customers_score.json  results.md  retail_orders_audit.jsonl  retail_orders_score.json  titanic_style_audit.jsonl  titanic_style_score.json
benchmark/results/qwen3.5_4b/: clinic_patients_audit.jsonl  clinic_patients_score.json  employees_audit.jsonl  results.md  (+9 more)
docs/: TOKEN_EFFICIENCY_PLAN.md  YODA_MINI_PLAN.md  example_report.md  index.html
docs/demo/: build.py  demo_shim.py  index.html  sample_messy.csv  yoda_agent-0.3.0-py3-none-any.whl
examples/: customers.csv
test_data/: employees_messy.csv  make_test_data.py  orders_messy.xlsx  shop.sqlite
tests/: test_llm_planner.py  test_new_tools.py  test_pipeline.py  test_recipe_watch.py  test_redactor.py  test_robustness.py  test_scaffold.py  test_scan_contract.py  test_tools.py  test_verifier.py  test_web.py
yoda/: __init__.py  cli.py  contract.py  executor.py  gate.py  io.py  planner.py  profiler.py  recipe.py  redactor.py  report.py  scan.py  verifier.py  watch.py  web.py
yoda/static/: index.html
yoda/tools/: __init__.py
(+13 files in other folders)
