[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yoda-agent"
version = "0.1.0"
description = "YODA — Your Offline Data Agent. Privacy-first, fully local data-cleaning agent: the LLM plans from metadata only; deterministic pandas executes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "John Andrei Martinez" }]
keywords = ["data-cleaning", "agent", "ollama", "pandas", "privacy", "local-llm"]
dependencies = [
    "pandas>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "python-dateutil>=2.8",
    "jsonschema>=4.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "faker>=24.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

[project.scripts]
yoda = "yoda.cli:app"

[tool.setuptools]
packages = ["yoda", "yoda.tools"]

[tool.setuptools.package-data]
yoda = ["static/*.html"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
